<resources>
    <string name="app_name">Wish It</string>
    <string name="dashboard_name">Your WishLists</string>
    <string name="search_bar">Search a Wishlist</string>
    <string name="default_description">Laink et Terracid, c\'est deux copains un peu betes et parfois meme mechants qui font de sacrees conneries. Mais y a plus d\'un million de gens sur YouTube qui les trouvent droles dans des videos alors ils ont eu l\'idée de faire une BD. Plein de gens l\'ont lue et se sont arraches les cheveux. Alors ils ont décide de revenir avec ce deuxieme tome ! Rappeurs, pere noel, extraterrestres\.\.\.Où s\'arreteront-ils ? Resume : PUTAIN ON A REFAIT UNE BD, C\'EST TROP BIEN </string>
    <string name="default_price">No price</string>
    <string name="default_link">Link</string>
    <string name="login_button">Login</string>
    <string name="login_show">Login with WishIt Account</string>
    <string name="create_account">Create Account</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="password_confirm_hint">Confirm Password</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="password_not_equal">Password are not equals</string>
    <string name="default_error_creation">Problem with Creation</string>
    <string name="create_wishlist_name">New Wishlist</string>
    <string name="create_item_name">New Product</string>
    <string name="enter_wishlist_name">Enter Wishlist Name</string>
    <string name="create_button">Create</string>
    <string name="create_amazon_button">Create from amazon link</string>
    <string name="name_empty">Name is empty</string>
    <string name="link_empty">Link is empty</string>
    <string name="amazon_link_not_working">Link amazon isn\'t working</string>
    <string name="enter_item_name">Product name</string>
    <string name="enter_item_description">Description of the product</string>
    <string name="enter_item_amount">Price</string>
    <string name="enter_item_link">Link for the product</string>
    <string name="create_item_optional">(Optional)</string>
    <string name="product_amount_empty">Amount is empty</string>
    <string name="product_name_empty">Product name is empty</string>
    <string name="product_link_problem">Link isn\'t working</string>
    <string name="details_modify">Modify</string>
    <string name="details_delete">Delete</string>
    <string name="modify_item_title">Modify Item</string>
    <string name="modify_amazon_item_button">Modify Item From Amazon Link</string>
    <string name="create_item_button">Create</string>
    <string name="modify_item_button">Modify</string>
    <string name="delete_message">Are you sure you want to delete</string>
    <string name="delete_button">Delete</string>
    <string name="cancel_button">Cancel</string>
    <string name="facebook_app_id">650603548751276</string>
    <string name="facebook_login_protocol_scheme">fb650603548751276</string>
    <string name="saved_facebook_token">com.example.IWish.facebook_saved_token_key</string>
    <string name="share_user_title">Invite user in </string>
    <string name="shared_user_title">Users seeing this Wishlist</string>
    <string name="enter_end_date">Enter the end date</string>
    <string name="choose_manager">Select the manager of the list</string>
    <string name="create_prizepool">Create</string>
    <string name="create_title">Create PrizePool</string>
    <string name="no_user_selected">No user selected</string>
    <string name="no_date_selected">No date entered</string>
    <string name="wrong_format">Date is in the wrong format dd/mm/yyyy</string>
    <string name="date_passed">Date is in the past</string>
    <string name="problem_creating_prizepool">There has been a problem with the creation</string>
    <string name="title_no_prizepool">No Prizepool for this Wishlist</string>
    <string name="title_donation_prizepool">Make a Donation</string>
    <string name="end_date">End date</string>
    <string name="manager">Manager of the prizepool</string>
    <string name="donation_amount">Donation amount</string>
    <string name="donation_creation">Make a donation</string>
    <string name="eur_symbol">€</string>
    <string name="empty_donation">Donation amount is empty</string>
    <string name="price_wrong_format">Donation amount has a wrong format</string>
    <string name="donation_accepted">Donation accepted</string>
    <string name="donation_list">Donation list</string>
    <string name="logout">Logout</string>
    <string name="categories_title">Centers of interest</string>
    <string name="price_comparator">Price on different site</string>
    <string name="profile_title">Your profile</string>
    <string name="enter_firstname">Firstname</string>
    <string name="enter_lastname">Lastname</string>
    <string name="enter_email">Mail</string>
    <string name="password_confirm">Type your password to confirm</string>
    <string name="empty_fields">Some fields are empty</string>
    <string name="recomendation_title">Recomendation</string>
    <string name="end_of_prizepool">The prizepool ended</string>
    <string name="get_donation">Get donations</string>
</resources>
